// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Marker /> by default should render the right structure 1`] = `
<Marker
  isActive={false}
  onChange={[Function]}
  onClick={[Function]}
>
  <div
    className="ui marker"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  />
</Marker>
`;

exports[`<Marker /> if \`props.isActive === true\` should render the right structure 1`] = `
<Marker
  isActive={true}
  onChange={[Function]}
  onClick={[Function]}
>
  <div
    className="ui marker active"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  />
</Marker>
`;
